--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "3"
-members = ["benchmark", "core/*", "languages/*/*", "packages/*"]
+members = ["benchmark", "core/*", "example", "languages/*/*", "packages/*"]
 
 [workspace.package]
 version = "0.0.0" # Unified packages version
@@ -38,13 +38,12 @@ criterion = "0.8.1"
 insta = "1.45.0"
 reqwest = "0.12.26"
 tokio = "1.48.0"
+umc_parser = { version = "0.0.0", path = "core/umc_parser" }
+umc_span = { version = "0.0.0", path = "core/umc_span" }
+umc_traverse = { version = "0.0.0", path = "core/umc_traverse" }
 
-# umc_ast = { version = "0.0.0-alpha.14", path = "core/umc_ast" }
-umc_parser = { version = "0.0.0-alpha.14", path = "core/umc_parser" }
-umc_span = { version = "0.0.0-alpha.14", path = "core/umc_span" }
-
-umc_html_ast = { version = "0.0.0-alpha.14", path = "languages/html/umc_html_ast" }
-umc_html_parser = { version = "0.0.0-alpha.14", path = "languages/html/umc_html_parser" }
+umc_html_ast = { version = "0.0.0", path = "languages/html/umc_html_ast" }
+umc_html_parser = { version = "0.0.0", path = "languages/html/umc_html_parser" }
 
 [workspace.lints.rust]
 absolute_paths_not_starting_with_crate = "warn"
