chore(style): enable clippy for exist crates

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,3 +75,4 @@ module_name_repetitions = "allow"
 doc_markdown = "allow"
 missing_errors_doc = "allow"
 must_use_candidate = "allow"
+cast_possible_truncation = "allow"
