--- a/core/umc_parser/Cargo.toml
+++ b/core/umc_parser/Cargo.toml
@@ -15,3 +15,6 @@ oxc_allocator = { workspace = true }
 oxc_diagnostics = { workspace = true }
 
 umc_span = { workspace = true }
+
+[lints]
+workspace = true
