--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,8 +28,10 @@ napi-build = "2"
 napi-derive = "3.4.1"
 
 oxc_allocator = "0.106.0"
+oxc_ast = "0.106.0"
 oxc_diagnostics = "0.106.0"
 oxc_parser = "0.106.0"
+oxc_span = "0.106.0"
 
 memchr = "2.7.6"
 miette = { package = "oxc-miette", version = "2.6.0", features = ["fancy-no-syscall"] }
